--- a/APIMARCK/.env
+++ b/APIMARCK/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://db_tinacosfelices_user:jsi7PLhh0QDribN2bssguyArJ4k3JWaY@dpg-clcqes6g1b2c73f15480-a.oregon-postgres.render.com/db_tinacosfelices
+DATABASE_URL=postgres://dbtinacos_user:sueceyVhqYY0EtOlZtGLkGXOP8VTL7k1@dpg-clcqh86g1b2c73f15pu0-a.oregon-postgres.render.com/dbtinacos
